--- a/src/index.css
+++ b/src/index.css
@@ -3,19 +3,13 @@
 @tailwind utilities;
 
 form {
-  width: 60%;
   margin: 0 auto;
 }
 
-label, input, legend {
-  width: 100%;
-  text-align: left;
-}
- label {
-   color: white;
- }
-
 input {
+  width: 100%;
+  height: 3rem;
+  border-radius: 8px;
   outline: none;
-  background: #ffec;
+  background: #FFFEFF;
 }
